--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: '3.8'
 
 services:
-  app:
-    build: .
-    ports:
-      - "8080:8080"
-    volumes:
-      - ./uploads:/root/uploads
-    depends_on:
-      - db
-    env_file:
-      - .env
+  # app:
+  #   build: .
+  #   ports:
+  #     - "8080:8080"
+  #   volumes:
+  #     - ./uploads:/root/uploads
+  #   depends_on:
+  #     - db
+  #   env_file:
+  #     - .env
 
   db:
     image: postgres:13-alpine
